format files and fix css colors and layout

--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,22 @@ body {
   }  
   .jumbotron {
       background-color: #f4511e;
-      color: #fff;
       padding: 100px 25px;
       font-family: Montserrat, sans-serif;
   }
+  .radioDiv{
+  	width: 300px;
+  	padding:30px;
+  }
+  label{
+  	width: 100px;
+  }
  
+ button{
+ 	margin-left: 200px;
+ }
+ table a{
+  color: black;
+  text-decoration-style: bold;
+  font-family: Montserrat, sans-serif;
+ }
